🐞fix(DraggableTitle): Insert the nearest gap

--- a/src/components/tilePane/view/Provider/config/TabBar/style.module.css
+++ b/src/components/tilePane/view/Provider/config/TabBar/style.module.css
@@ -18,7 +18,6 @@
 }
 .tabMoving {
   padding: 0.3em 1em;
-  border: solid 1px #002c1d;
   border-radius: 4px;
   background: #f5ffd3;
 }
